tests/sksl/errors/ArrayUnspecifiedDimensions.sksl
in int arrUnsized[];
in int arrFloat[1.];
in int arrBool[true];
